terminado header. Ffalta section lateral

--- a/index.html
+++ b/index.html
@@ -4,12 +4,42 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Faro</title>
         <link rel="stylesheet" href="./css/main.css" />
     </head>
     <body>
-        <!-- HEADER -->
+        <!-- HEADER, Background image-->
         <header>
+        <!--section para central contenido con padding-->
+            <section class="contenido">
+            <!--article para organizar logo, navegador y menú-->
+                <article class="contenido__navegador">
+                    <article class="justificado">
+                        <img src="./img/desktop/icon/logo 1.svg" alt="">
+                        <img src="./img/desktop/icon/flecha-correcta 1.svg" alt="">
+                    </article>
+                    <nav class="contenido__navegador__menu">
+                        <a class="menu" href="#">inicio</a>
+                        <a class="menu" href="#">galeria</a>
+                        <a class="menu" href="#">contactar</a>
+                    </nav>
+                    <img src="./img/desktop/icon/menu 1.svg" alt="menu_faro">
+                </article>
+                <article class="contenido__centro">
+                    <img class="centro"src="">
+                </article>
+                <article class="contenido__inferior">
+                    <article class="gridImg1">
+                        <a class="gridImg__flecha" href="#"><img src="./img/desktop/icon/flecha-correcta 2.svg"></a>
+                    </article> 
+                    <article class="gridImg2">
+                        <a class="gridImg__flecha" href="#"><img src="./img/desktop/icon/flecha-correcta 2.svg"></a>
+                    </article> 
+                    <article class="gridImg3">
+                        <a class="gridImg__flecha" href="#"><img src="./img/desktop/icon/flecha-correcta 2.svg"></a>
+                    </article>       
+                </article>
+            </section>
         </header>
         <!-- MAIN -->
         <main>
